# listening-companion

./: .dockerignore  .gitignore  ARCHITECTURE.md  BUGFIX-CHECKLIST.md  CLAUDE.md  DEBUG-TTS-2.md  DEBUG-TTS-3.md  DEBUG-TTS-4.md  DEBUG-TTS.md  Dockerfile  README.md  SPEC.md  TODO-CHECKLIST.md  docker-compose.yml  fly.toml
.factory/: init.sh  services.yaml
.factory/skills/fullstack-worker/: SKILL.md
backend/: .env.example  .gitignore  agent.py  config.py  database.py  image_gen.py  image_storage.py  main.py  models.py  pyproject.toml  stt.py  tts.py  ws_handler.py
backend/memory/: long_term.py  short_term.py
backend/tests/: conftest.py  test_agent_context.py  test_agent_models.py  test_agent_prompt.py  test_agent_trigger.py  test_auto_naming.py  test_cross_integration.py  test_image_gen.py  test_image_storage.py  test_memory.py  test_models.py  test_sessions.py  test_summarization.py  test_tools.py  test_tts_image_gen.py
backend/tools/: __init__.py  entity_tracker.py  image_tool.py  memory_ops.py  tts_tool.py
docs/plans/: 2026-03-07-backend-implementation.md  2026-03-07-frontend-design.md  2026-03-07-frontend-implementation.md  2026-03-07-phase3-wiring.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: audio-processor.worklet.js
frontend/src/: App.tsx
frontend/src/app/: App.tsx  AppLayout.tsx
frontend/src/components/: ErrorBanner.tsx  PasswordGate.tsx  SessionMetadataPanel.test.tsx  SessionMetadataPanel.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useAudioCapture.ts  (+3 more)
(+50 files in other folders)
